# Echolog

./: .env.example  .gitignore  AGENTS.md  EchoLog_Complete_Specification.docx  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  Procfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py
backend/app/api/analysis/: routes.py
backend/app/api/analytics/: routes.py
backend/app/api/feedback/: routes.py
backend/app/common/: error_handlers.py  logging.py  middleware.py
backend/app/domain/: enums.py  errors.py  models.py  state_machine.py
backend/app/schemas/: analysis.py  feedback.py  feedback_response.py
backend/app/services/: analysis_service.py  feedback_service.py  llm_service.py  validation_service.py
backend/migrations/versions/: 2083d9a4bade_initial_migration.py
backend/tests/: conftest.py  factories.py  test_evaluation_criteria.py
backend/tests/integration/: test_analysis_api.py  test_feedback_api.py
backend/tests/unit/: test_state_machine.py  test_validation_service.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: AnalysisPanel.test.tsx  Badge.test.tsx  Button.test.tsx  FeedbackTable.test.tsx
frontend/src/api/: analysis.ts  analytics.ts  client.ts  feedback.ts
frontend/src/components/layout/: AppShell.tsx  Navbar.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  (+3 more)
frontend/src/schemas/: analysis.ts  feedback.ts
frontend/src/store/: index.ts
frontend/src/types/: index.ts
(+15 files in other folders)
